/**
 * Autogenerated by Avro
 *
 * DO NOT EDIT DIRECTLY
 */
package io.seak.avro;
@org.apache.avro.specific.AvroGenerated
public enum MarketDataEntry implements org.apache.avro.generic.GenericEnumSymbol<MarketDataEntry> {
  LOW, HIGH, OPEN, CLOSE  ;
  public static final org.apache.avro.Schema SCHEMA$ = new org.apache.avro.Schema.Parser().parse("{\"type\":\"enum\",\"name\":\"MarketDataEntry\",\"namespace\":\"io.seak.avro\",\"symbols\":[\"LOW\",\"HIGH\",\"OPEN\",\"CLOSE\"]}");
  public static org.apache.avro.Schema getClassSchema() { return SCHEMA$; }

  @Override
  public org.apache.avro.Schema getSchema() { return SCHEMA$; }
}
