/**
 * Autogenerated by Avro
 *
 * DO NOT EDIT DIRECTLY
 */
package io.seak.avro;

import org.apache.avro.generic.GenericArray;
import org.apache.avro.specific.SpecificData;
import org.apache.avro.util.Utf8;
import org.apache.avro.message.BinaryMessageEncoder;
import org.apache.avro.message.BinaryMessageDecoder;
import org.apache.avro.message.SchemaStore;

@org.apache.avro.specific.AvroGenerated
public class MarketDataRejected extends org.apache.avro.specific.SpecificRecordBase implements org.apache.avro.specific.SpecificRecord {
  private static final long serialVersionUID = -1567130192013241934L;


  public static final org.apache.avro.Schema SCHEMA$ = new org.apache.avro.Schema.Parser().parse("{\"type\":\"record\",\"name\":\"MarketDataRejected\",\"namespace\":\"io.seak.avro\",\"fields\":[{\"name\":\"username\",\"type\":\"string\"},{\"name\":\"requestId\",\"type\":\"string\"},{\"name\":\"reason\",\"type\":{\"type\":\"enum\",\"name\":\"MarketDataRejectedReason\",\"symbols\":[\"UNKNOWN_SYMBOL\",\"DUPLICATE_MD_REQ_ID\",\"UNSUPPORTED_SUBSCRIPTION_REQUEST_TYPE\",\"UNSUPPORTED_MARKET_DEPTH\",\"UNSUPPORTED_MD_UPDATE_TYPE\",\"UNSUPPORTED_MD_ENTRY_TYPE\"]}}]}");
  public static org.apache.avro.Schema getClassSchema() { return SCHEMA$; }

  private static final SpecificData MODEL$ = new SpecificData();

  private static final BinaryMessageEncoder<MarketDataRejected> ENCODER =
      new BinaryMessageEncoder<>(MODEL$, SCHEMA$);

  private static final BinaryMessageDecoder<MarketDataRejected> DECODER =
      new BinaryMessageDecoder<>(MODEL$, SCHEMA$);

  /**
   * Return the BinaryMessageEncoder instance used by this class.
   * @return the message encoder used by this class
   */
  public static BinaryMessageEncoder<MarketDataRejected> getEncoder() {
    return ENCODER;
  }

  /**
   * Return the BinaryMessageDecoder instance used by this class.
   * @return the message decoder used by this class
   */
  public static BinaryMessageDecoder<MarketDataRejected> getDecoder() {
    return DECODER;
  }

  /**
   * Create a new BinaryMessageDecoder instance for this class that uses the specified {@link SchemaStore}.
   * @param resolver a {@link SchemaStore} used to find schemas by fingerprint
   * @return a BinaryMessageDecoder instance for this class backed by the given SchemaStore
   */
  public static BinaryMessageDecoder<MarketDataRejected> createDecoder(SchemaStore resolver) {
    return new BinaryMessageDecoder<>(MODEL$, SCHEMA$, resolver);
  }

  /**
   * Serializes this MarketDataRejected to a ByteBuffer.
   * @return a buffer holding the serialized data for this instance
   * @throws java.io.IOException if this instance could not be serialized
   */
  public java.nio.ByteBuffer toByteBuffer() throws java.io.IOException {
    return ENCODER.encode(this);
  }

  /**
   * Deserializes a MarketDataRejected from a ByteBuffer.
   * @param b a byte buffer holding serialized data for an instance of this class
   * @return a MarketDataRejected instance decoded from the given buffer
   * @throws java.io.IOException if the given bytes could not be deserialized into an instance of this class
   */
  public static MarketDataRejected fromByteBuffer(
      java.nio.ByteBuffer b) throws java.io.IOException {
    return DECODER.decode(b);
  }

  private java.lang.CharSequence username;
  private java.lang.CharSequence requestId;
  private io.seak.avro.MarketDataRejectedReason reason;

  /**
   * Default constructor.  Note that this does not initialize fields
   * to their default values from the schema.  If that is desired then
   * one should use <code>newBuilder()</code>.
   */
  public MarketDataRejected() {}

  /**
   * All-args constructor.
   * @param username The new value for username
   * @param requestId The new value for requestId
   * @param reason The new value for reason
   */
  public MarketDataRejected(java.lang.CharSequence username, java.lang.CharSequence requestId, io.seak.avro.MarketDataRejectedReason reason) {
    this.username = username;
    this.requestId = requestId;
    this.reason = reason;
  }

  @Override
  public org.apache.avro.specific.SpecificData getSpecificData() { return MODEL$; }

  @Override
  public org.apache.avro.Schema getSchema() { return SCHEMA$; }

  // Used by DatumWriter.  Applications should not call.
  @Override
  public java.lang.Object get(int field$) {
    switch (field$) {
    case 0: return username;
    case 1: return requestId;
    case 2: return reason;
    default: throw new IndexOutOfBoundsException("Invalid index: " + field$);
    }
  }

  // Used by DatumReader.  Applications should not call.
  @Override
  @SuppressWarnings(value="unchecked")
  public void put(int field$, java.lang.Object value$) {
    switch (field$) {
    case 0: username = (java.lang.CharSequence)value$; break;
    case 1: requestId = (java.lang.CharSequence)value$; break;
    case 2: reason = (io.seak.avro.MarketDataRejectedReason)value$; break;
    default: throw new IndexOutOfBoundsException("Invalid index: " + field$);
    }
  }

  /**
   * Gets the value of the 'username' field.
   * @return The value of the 'username' field.
   */
  public java.lang.CharSequence getUsername() {
    return username;
  }


  /**
   * Sets the value of the 'username' field.
   * @param value the value to set.
   */
  public void setUsername(java.lang.CharSequence value) {
    this.username = value;
  }

  /**
   * Gets the value of the 'requestId' field.
   * @return The value of the 'requestId' field.
   */
  public java.lang.CharSequence getRequestId() {
    return requestId;
  }


  /**
   * Sets the value of the 'requestId' field.
   * @param value the value to set.
   */
  public void setRequestId(java.lang.CharSequence value) {
    this.requestId = value;
  }

  /**
   * Gets the value of the 'reason' field.
   * @return The value of the 'reason' field.
   */
  public io.seak.avro.MarketDataRejectedReason getReason() {
    return reason;
  }


  /**
   * Sets the value of the 'reason' field.
   * @param value the value to set.
   */
  public void setReason(io.seak.avro.MarketDataRejectedReason value) {
    this.reason = value;
  }

  /**
   * Creates a new MarketDataRejected RecordBuilder.
   * @return A new MarketDataRejected RecordBuilder
   */
  public static io.seak.avro.MarketDataRejected.Builder newBuilder() {
    return new io.seak.avro.MarketDataRejected.Builder();
  }

  /**
   * Creates a new MarketDataRejected RecordBuilder by copying an existing Builder.
   * @param other The existing builder to copy.
   * @return A new MarketDataRejected RecordBuilder
   */
  public static io.seak.avro.MarketDataRejected.Builder newBuilder(io.seak.avro.MarketDataRejected.Builder other) {
    if (other == null) {
      return new io.seak.avro.MarketDataRejected.Builder();
    } else {
      return new io.seak.avro.MarketDataRejected.Builder(other);
    }
  }

  /**
   * Creates a new MarketDataRejected RecordBuilder by copying an existing MarketDataRejected instance.
   * @param other The existing instance to copy.
   * @return A new MarketDataRejected RecordBuilder
   */
  public static io.seak.avro.MarketDataRejected.Builder newBuilder(io.seak.avro.MarketDataRejected other) {
    if (other == null) {
      return new io.seak.avro.MarketDataRejected.Builder();
    } else {
      return new io.seak.avro.MarketDataRejected.Builder(other);
    }
  }

  /**
   * RecordBuilder for MarketDataRejected instances.
   */
  @org.apache.avro.specific.AvroGenerated
  public static class Builder extends org.apache.avro.specific.SpecificRecordBuilderBase<MarketDataRejected>
    implements org.apache.avro.data.RecordBuilder<MarketDataRejected> {

    private java.lang.CharSequence username;
    private java.lang.CharSequence requestId;
    private io.seak.avro.MarketDataRejectedReason reason;

    /** Creates a new Builder */
    private Builder() {
      super(SCHEMA$, MODEL$);
    }

    /**
     * Creates a Builder by copying an existing Builder.
     * @param other The existing Builder to copy.
     */
    private Builder(io.seak.avro.MarketDataRejected.Builder other) {
      super(other);
      if (isValidValue(fields()[0], other.username)) {
        this.username = data().deepCopy(fields()[0].schema(), other.username);
        fieldSetFlags()[0] = other.fieldSetFlags()[0];
      }
      if (isValidValue(fields()[1], other.requestId)) {
        this.requestId = data().deepCopy(fields()[1].schema(), other.requestId);
        fieldSetFlags()[1] = other.fieldSetFlags()[1];
      }
      if (isValidValue(fields()[2], other.reason)) {
        this.reason = data().deepCopy(fields()[2].schema(), other.reason);
        fieldSetFlags()[2] = other.fieldSetFlags()[2];
      }
    }

    /**
     * Creates a Builder by copying an existing MarketDataRejected instance
     * @param other The existing instance to copy.
     */
    private Builder(io.seak.avro.MarketDataRejected other) {
      super(SCHEMA$, MODEL$);
      if (isValidValue(fields()[0], other.username)) {
        this.username = data().deepCopy(fields()[0].schema(), other.username);
        fieldSetFlags()[0] = true;
      }
      if (isValidValue(fields()[1], other.requestId)) {
        this.requestId = data().deepCopy(fields()[1].schema(), other.requestId);
        fieldSetFlags()[1] = true;
      }
      if (isValidValue(fields()[2], other.reason)) {
        this.reason = data().deepCopy(fields()[2].schema(), other.reason);
        fieldSetFlags()[2] = true;
      }
    }

    /**
      * Gets the value of the 'username' field.
      * @return The value.
      */
    public java.lang.CharSequence getUsername() {
      return username;
    }


    /**
      * Sets the value of the 'username' field.
      * @param value The value of 'username'.
      * @return This builder.
      */
    public io.seak.avro.MarketDataRejected.Builder setUsername(java.lang.CharSequence value) {
      validate(fields()[0], value);
      this.username = value;
      fieldSetFlags()[0] = true;
      return this;
    }

    /**
      * Checks whether the 'username' field has been set.
      * @return True if the 'username' field has been set, false otherwise.
      */
    public boolean hasUsername() {
      return fieldSetFlags()[0];
    }


    /**
      * Clears the value of the 'username' field.
      * @return This builder.
      */
    public io.seak.avro.MarketDataRejected.Builder clearUsername() {
      username = null;
      fieldSetFlags()[0] = false;
      return this;
    }

    /**
      * Gets the value of the 'requestId' field.
      * @return The value.
      */
    public java.lang.CharSequence getRequestId() {
      return requestId;
    }


    /**
      * Sets the value of the 'requestId' field.
      * @param value The value of 'requestId'.
      * @return This builder.
      */
    public io.seak.avro.MarketDataRejected.Builder setRequestId(java.lang.CharSequence value) {
      validate(fields()[1], value);
      this.requestId = value;
      fieldSetFlags()[1] = true;
      return this;
    }

    /**
      * Checks whether the 'requestId' field has been set.
      * @return True if the 'requestId' field has been set, false otherwise.
      */
    public boolean hasRequestId() {
      return fieldSetFlags()[1];
    }


    /**
      * Clears the value of the 'requestId' field.
      * @return This builder.
      */
    public io.seak.avro.MarketDataRejected.Builder clearRequestId() {
      requestId = null;
      fieldSetFlags()[1] = false;
      return this;
    }

    /**
      * Gets the value of the 'reason' field.
      * @return The value.
      */
    public io.seak.avro.MarketDataRejectedReason getReason() {
      return reason;
    }


    /**
      * Sets the value of the 'reason' field.
      * @param value The value of 'reason'.
      * @return This builder.
      */
    public io.seak.avro.MarketDataRejected.Builder setReason(io.seak.avro.MarketDataRejectedReason value) {
      validate(fields()[2], value);
      this.reason = value;
      fieldSetFlags()[2] = true;
      return this;
    }

    /**
      * Checks whether the 'reason' field has been set.
      * @return True if the 'reason' field has been set, false otherwise.
      */
    public boolean hasReason() {
      return fieldSetFlags()[2];
    }


    /**
      * Clears the value of the 'reason' field.
      * @return This builder.
      */
    public io.seak.avro.MarketDataRejected.Builder clearReason() {
      reason = null;
      fieldSetFlags()[2] = false;
      return this;
    }

    @Override
    @SuppressWarnings("unchecked")
    public MarketDataRejected build() {
      try {
        MarketDataRejected record = new MarketDataRejected();
        record.username = fieldSetFlags()[0] ? this.username : (java.lang.CharSequence) defaultValue(fields()[0]);
        record.requestId = fieldSetFlags()[1] ? this.requestId : (java.lang.CharSequence) defaultValue(fields()[1]);
        record.reason = fieldSetFlags()[2] ? this.reason : (io.seak.avro.MarketDataRejectedReason) defaultValue(fields()[2]);
        return record;
      } catch (org.apache.avro.AvroMissingFieldException e) {
        throw e;
      } catch (java.lang.Exception e) {
        throw new org.apache.avro.AvroRuntimeException(e);
      }
    }
  }

  @SuppressWarnings("unchecked")
  private static final org.apache.avro.io.DatumWriter<MarketDataRejected>
    WRITER$ = (org.apache.avro.io.DatumWriter<MarketDataRejected>)MODEL$.createDatumWriter(SCHEMA$);

  @Override public void writeExternal(java.io.ObjectOutput out)
    throws java.io.IOException {
    WRITER$.write(this, SpecificData.getEncoder(out));
  }

  @SuppressWarnings("unchecked")
  private static final org.apache.avro.io.DatumReader<MarketDataRejected>
    READER$ = (org.apache.avro.io.DatumReader<MarketDataRejected>)MODEL$.createDatumReader(SCHEMA$);

  @Override public void readExternal(java.io.ObjectInput in)
    throws java.io.IOException {
    READER$.read(this, SpecificData.getDecoder(in));
  }

  @Override protected boolean hasCustomCoders() { return true; }

  @Override public void customEncode(org.apache.avro.io.Encoder out)
    throws java.io.IOException
  {
    out.writeString(this.username);

    out.writeString(this.requestId);

    out.writeEnum(this.reason.ordinal());

  }

  @Override public void customDecode(org.apache.avro.io.ResolvingDecoder in)
    throws java.io.IOException
  {
    org.apache.avro.Schema.Field[] fieldOrder = in.readFieldOrderIfDiff();
    if (fieldOrder == null) {
      this.username = in.readString(this.username instanceof Utf8 ? (Utf8)this.username : null);

      this.requestId = in.readString(this.requestId instanceof Utf8 ? (Utf8)this.requestId : null);

      this.reason = io.seak.avro.MarketDataRejectedReason.values()[in.readEnum()];

    } else {
      for (int i = 0; i < 3; i++) {
        switch (fieldOrder[i].pos()) {
        case 0:
          this.username = in.readString(this.username instanceof Utf8 ? (Utf8)this.username : null);
          break;

        case 1:
          this.requestId = in.readString(this.requestId instanceof Utf8 ? (Utf8)this.requestId : null);
          break;

        case 2:
          this.reason = io.seak.avro.MarketDataRejectedReason.values()[in.readEnum()];
          break;

        default:
          throw new java.io.IOException("Corrupt ResolvingDecoder.");
        }
      }
    }
  }
}










