/**
 * Autogenerated by Avro
 *
 * DO NOT EDIT DIRECTLY
 */
package io.seak.avro;
@org.apache.avro.specific.AvroGenerated
public enum MarketDataRejectedReason implements org.apache.avro.generic.GenericEnumSymbol<MarketDataRejectedReason> {
  UNKNOWN_SYMBOL, DUPLICATE_MD_REQ_ID, UNSUPPORTED_SUBSCRIPTION_REQUEST_TYPE, UNSUPPORTED_MARKET_DEPTH, UNSUPPORTED_MD_UPDATE_TYPE, UNSUPPORTED_MD_ENTRY_TYPE  ;
  public static final org.apache.avro.Schema SCHEMA$ = new org.apache.avro.Schema.Parser().parse("{\"type\":\"enum\",\"name\":\"MarketDataRejectedReason\",\"namespace\":\"io.seak.avro\",\"symbols\":[\"UNKNOWN_SYMBOL\",\"DUPLICATE_MD_REQ_ID\",\"UNSUPPORTED_SUBSCRIPTION_REQUEST_TYPE\",\"UNSUPPORTED_MARKET_DEPTH\",\"UNSUPPORTED_MD_UPDATE_TYPE\",\"UNSUPPORTED_MD_ENTRY_TYPE\"]}");
  public static org.apache.avro.Schema getClassSchema() { return SCHEMA$; }

  @Override
  public org.apache.avro.Schema getSchema() { return SCHEMA$; }
}
