/**
 * Autogenerated by Avro
 *
 * DO NOT EDIT DIRECTLY
 */
package io.seak.avro;
@org.apache.avro.specific.AvroGenerated
public enum MarketDataSubscriptionRequest implements org.apache.avro.generic.GenericEnumSymbol<MarketDataSubscriptionRequest> {
  SNAPSHOT, SUBSCRIBE, UNSUBSCRIBE  ;
  public static final org.apache.avro.Schema SCHEMA$ = new org.apache.avro.Schema.Parser().parse("{\"type\":\"enum\",\"name\":\"MarketDataSubscriptionRequest\",\"namespace\":\"io.seak.avro\",\"symbols\":[\"SNAPSHOT\",\"SUBSCRIBE\",\"UNSUBSCRIBE\"]}");
  public static org.apache.avro.Schema getClassSchema() { return SCHEMA$; }

  @Override
  public org.apache.avro.Schema getSchema() { return SCHEMA$; }
}
